# miniscience-4th-term

./: .gitignore
01_meshes/: README.md
01_meshes/cpp/: CMakeLists.txt  Makefile
02_vtk/cpp/: CMakeLists.txt  cubic2d.cpp  cubic3d.cpp  tetr3d.cpp
02_vtk/python/: cubic3d.py  tetr3d.py
04_microproject/: README.md
2021/01_meshes/cpp/: sample02.cpp  sample03.cpp  sample04.cpp
2021/01_meshes/python/: sample01.py  sample02.py  sample04.py
2021/02_vtk/: README.md
2021/03_fenics/cpp/: HyperElasticity.cpp  HyperElasticity.h  Poisson.cpp  Poisson.h
2021/03_fenics/python/: elasticity.py  navier_stokes_cylinder.py  poisson.py
2021/parallel_and_other_perf_demos/: README.md
2021/parallel_and_other_perf_demos/cpp_single_thread_perf/01_perf_compiler_options/: matrix.c
2021/parallel_and_other_perf_demos/cpp_single_thread_perf/02_perf_code_structure_and_hw_caches/: matrix2.c
2021/parallel_and_other_perf_demos/gpu/cpp/: 01_add.cpp  03_add.cu  04_add.cu
2021/parallel_and_other_perf_demos/gpu/python/: 03_add.py
2021/parallel_and_other_perf_demos/mpi/cpp/: 01_hello.cpp  02_integral.cpp  README.md
2021/parallel_and_other_perf_demos/mpi/python/: 02_integral.py
2021/parallel_and_other_perf_demos/openmp/cpp/: 01_basics.cpp  02_sync.cpp  03_for.cpp  matrix_01.c
2021/parallel_and_other_perf_demos/openmp/cython/: .gitignore  README  launch.py  plane_python.py
2022/01_meshes/: README.md
2022/01_meshes/cpp/: CMakeLists.txt  Makefile
2022/01_meshes/python/: sample03.py
2022/02_vtk/cpp/: CMakeLists.txt  cubic2d.cpp  cubic3d.cpp  tetr3d.cpp
2022/02_vtk/python/: cubic2d.py  tetr3d.py
2022/03_fenics/: README.md
2022/03_fenics/cpp/: Poisson.h
2022/parallel_and_other_perf_demos/cpp_single_thread_perf/02_perf_code_structure_and_hw_caches/: matrix1.c
2022/parallel_and_other_perf_demos/cpp_single_thread_perf/03_perf_magic_ilp/: 02_here_they_are.c
2022/parallel_and_other_perf_demos/gpu/cpp/: 02_add.cu  05_add.cu
2022/parallel_and_other_perf_demos/mpi/python/: 01_hello.py  README.md
2022/parallel_and_other_perf_demos/openmp/cython/: using_cython_and_openmp.pyx
2025/01_meshes/: README.md
2025/01_meshes/cpp/: Ball.STL  CMakeLists.txt  Cube.stl  lab01_1.cpp  lab01_3.cpp  sample01.cpp  sample04.cpp  sample05.cpp  sample06.cpp  trash.txt  wolfinal.stl  wolfinal_new.stl
2025/01_meshes/cpp/test/: CMakeLists.txt
2025/01_meshes/cpp/test/src/: main.cpp
2025/01_meshes/python/: sample04.py
2025/01_meshes/test.proj/test/test.xcodeproj/: project.pbxproj
2025/01_meshes/test.proj/test/test.xcodeproj/project.xcworkspace/xcuserdata/forcs2.xcuserdatad/: UserInterfaceState.xcuserstate
2025/02_vtk/: README.md
2025/02_vtk/cpp/: CMakeLists.txt  tetr3d.cpp
2025/02_vtk/python/: cubic2d.py  cubic3d.py
2025/03_fenics/: README.md
2025/03_fenics/cpp/: CMakeLists.txt  HyperElasticity.ufl  Poisson.ufl
2025/03_fenics/python/: elastodynamics.py  electricity.py  heat.py
parallel_and_other_perf_demos/cpp_single_thread_perf/03_perf_magic_ilp/: 01_where_are_my_flops.c
parallel_and_other_perf_demos/gpu/cpp/: README
parallel_and_other_perf_demos/gpu/python/: 01_add.py  02_add.py
parallel_and_other_perf_demos/openmp/cpp/: README.md  matrix_02.c  matrix_03.c
parallel_and_other_perf_demos/openmp/cython/: setup.py  using_cython.pyx
